added the links in the tweets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<h1>
-  {{title}}
-</h1>
+
+
+<app-navbar></app-navbar>
+
+<div class="container">
+
+	<div class="row">
+		<div class="col-md-8">
+			<app-tweets [player]="player" [team]="team" [author]="author"></app-tweets>
+		</div>
+
+		<div class="col-md-4">
+					
+		</div>
+	</div>
+		
+</div>
