added the chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
 		</div>
 
 		<div class="col-md-4">
-					
+			<app-playerinfo></app-playerinfo>
+			<hr>
+			<app-chart></app-chart>
 		</div>
 	</div>
 		
