added the front end fixes

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,16 @@
-<p>
-  form works!
-</p>
+<div class="form-group">
+	<div class="row">
+		<div class="col-md-4">
+			<label class="label-control">player</label>
+			<input #player class="form-control"/>
+		</div>
+		<div class="col-md-4">
+			<label class="label-control">team</label>
+			<input #team class="form-control"/>
+		</div>
+		<div class="col-md-4">
+			<label class="label-control">author</label>
+			<input #author class="form-control"/>
+		</div>
+	</div>
+</div>
