--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <app-navbar></app-navbar>
-
+<app-main-image></app-main-image>
 <div class="container">
+
+	<app-form></app-form>
 
 	<div class="row">
 		<div class="col-md-8">
