fixes in the chart

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -14,3 +14,7 @@
 		</div>
 	</div>
 </div>
+
+<div style="text-align: center;">
+	<button type="button" class="btn btn-primary">get transfers</button>	
+</div>
