--- a/src/app/main-image/main-image.component.css
+++ b/src/app/main-image/main-image.component.css
@@ -1,12 +1,13 @@
 .hero {
 	text-align: center;
 	background-image: url("../../assets/img/hero.jpg");
-	height: 500px;
+	height: 400px;
+	margin-bottom: 50px; 
 }
 
 .hero .hero-heading{
 	color:white;
-	padding: 100px 0 50px 0;
+	padding: 50px 0 50px 0;
 	font-size: 50px;
 }
 
