added the working form

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -16,5 +16,5 @@
 </div>
 
 <div style="text-align: center;">
-	<button type="button" class="btn btn-primary">get transfers</button>	
+	<button type="button" class="btn btn-primary" (click)="onClickGetTransfers()">get transfers</button>	
 </div>
