--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<app-tweets [player]="player" [team]="team" [author]="author"></app-tweets>
+			<app-tweets></app-tweets>
 		</div>
 
 		<div class="col-md-4">
