added the socket.io and improved the styles

--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -11,3 +11,8 @@
 		</div>
 	</div>
 </div>
+
+
+<blockquote class="twitter-tweet">
+    <a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}"></a>
+</blockquote>
