--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,40 +1,49 @@
-<div class="form-group">
 
-
-	
-
-	<div class="row">
-		<div class="col-md-4">
-			<label class="label-control">player</label>
-			<input #player class="form-control"/>
-		</div>
-		<div class="col-md-4">
-			<label class="label-control">team</label>
-			<input #team class="form-control"/>
-		</div>
-		<div class="col-md-4">
-			<label class="label-control">author</label>
-			<input #author class="form-control"/>
-		</div>
-	</div>
-
-	<div style="text-align: center ;margin: auto;padding: 50px 0 20px 0;" class="row">
-		<div class="col-md-6">
-			<label>Source</label>
-			<select class="source-select" #source>
-				<option value="" disabled selected>Select your option</option>
-				<option value="rest">Twitter Rest</option>
-				<option value="stream">Twitter Streaming</option>
-			</select>		
-		</div>	
-		<div class="col-md-6">
-			<label>Use Database</label>
-			<input type="checkbox" [(ngModel)]="useDb" checked="0" />
-		</div>
-	</div>
-
-</div>
+<!-- Contact Section -->
+    <section id="contact">
+        <div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Search Transfer News !</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="name">Player</label>
+                                <input [(ngModel)]="player" type="text" class="form-control" placeholder="Player" id="name" >
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="email">Team</label>
+                                <input [(ngModel)]="team" type="text" class="form-control" placeholder="Team" id="email">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="phone">Author</label>
+                                <input [(ngModel)]="author" type="text" class="form-control" placeholder="Author" id="phone" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+							<label style="color: #999;font-size: 1.5em;font-weight: unset; padding: 30px 0 30px 0;">Use Database</label>
+							<input class="form-control pull-right" style="margin: 30px 0 30px 0;width: 50%;" type="checkbox" [(ngModel)]="useDb" data-toggle="toggle">
+						</div>
+                        <br>
+                        <div id="success"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <div style="text-align: center;">
-	<button type="button" class="btn btn-primary" (click)="onClickGetTransfers()">get transfers</button>	
+	<button type="button" class="btn btn-primary" (click)="onClickGetTransfers()">get transfer news</button>	
 </div>
