--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -10,35 +10,52 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <div name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Player</label>
-                                <input [(ngModel)]="player" type="text" class="form-control" placeholder="Player" id="name" >
+                                <input [(ngModel)]="player" type="text" class="form-control" placeholder="Player" />
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Team</label>
-                                <input [(ngModel)]="team" type="text" class="form-control" placeholder="Team" id="email">
+                                <select style="width: 20%;margin-top: 20px;" class="form-control" [(ngModel)]="player_team_op">
+                                	<option value="AND">And</option>
+                                	<option value="OR">Or</option>
+                                </select>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <input [(ngModel)]="team" type="text" class="form-control" placeholder="Team" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <select style="width: 20%;margin-top: 20px;" class="form-control" [(ngModel)]="team_author_op">
+                                	<option value="AND">And</option>
+                                	<option value="OR">Or</option>
+                                </select>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Author</label>
-                                <input [(ngModel)]="author" type="text" class="form-control" placeholder="Author" id="phone" />
+                                <input [(ngModel)]="author" type="text" class="form-control" placeholder="Author"/>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="form-group">
 							<label style="color: #999;font-size: 1.5em;font-weight: unset; padding: 30px 0 30px 0;">Use Database</label>
-							<input class="form-control pull-right" style="margin: 30px 0 30px 0;width: 50%;" type="checkbox" [(ngModel)]="useDb" data-toggle="toggle">
+							<input class="form-control pull-right" style="margin: 30px 0 30px 0;width: 50%;" type="checkbox" [(ngModel)]="useDb" />
 						</div>
                         <br>
                         <div id="success"></div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
