--- a/src/app/tweet/tweet.component.css
+++ b/src/app/tweet/tweet.component.css
@@ -6,3 +6,18 @@
 	margin: 20px;
     box-shadow: 0 1px 14px -6px #000; 
 }
+
+
+.SandboxRoot{
+	width: 100% !important;
+} 
+
+.custom-twitter-widget{
+	background-color: #161625;
+	border-radius: 2px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #06061d;
+    box-shadow: 0 1px 14px -6px #000;
+    color: white;
+}
