--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -1,4 +1,5 @@
-<div class="tweet">
+<!-- <p>{{tweet.id}}</p> -->
+<!-- <div class="tweet">
 	<div class="row">
 		<div class="col-md-2">
 			<img class="img img-responsive" style="padding-top: 10px;margin: auto;width: 80px;height: 80px;margin-top: 20px;" src="{{tweet.user.profile_image_url}}">
@@ -10,9 +11,32 @@
 
 		</div>
 	</div>
+</div> -->
+
+
+<div class="custom-twitter-widget">
+	<div class="row">
+		<div class="col-md-2">
+			<img style="padding-top: 30px;margin: auto;" class="img img-responsive" src="{{tweet.user.profile_image_url}}" />
+		</div>
+		<div class="col-md-10">
+			<h1><a href="{{tweet.user.url}}">{{tweet.user.name}}</a></h1>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<img style="max-height: 400px;margin:auto;padding-top: 10px;" class="img img-responsive" src="{{tweet.user.profile_background_image_url}}" alt="">
+		</div>
+	</div>
+
+	<div class="row">
+		<p style="padding: 20px 30px 30px 30px;" #text></p>	
+	</div>
 </div>
 
-
-<blockquote class="twitter-tweet">
-    <a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}"></a>
-</blockquote>
+<!-- <ng2-tweet tweetId="{{tweet.id}}"></ng2-tweet> -->
+<!-- <div class="tweet_div" #tweet_div>
+	
+</div>
+ -->
