added paginations, and fixes in chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
 		</div>
 
 		<div class="col-md-4">
-			<app-playerinfo></app-playerinfo>
+			<div style="display: none;">
+				<app-playerinfo></app-playerinfo>	
+			</div>	
 			<hr>
 			<app-chart></app-chart>
 		</div>
