--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -3,6 +3,8 @@
 }
 
 
+
+
 /*!
  * Start Bootstrap - Freelancer v3.3.7+1 (http://startbootstrap.com/template-overviews/freelancer)
  * Copyright 2013-2016 Start Bootstrap
@@ -518,4 +520,8 @@ fieldset[disabled] .btn-success.active {
 }
 div#maincontent {
   outline: none;
+}
+
+.star-primary:after{
+  background-color: #f0f0f0;
 }
