--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,7 +5,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Search Transfer News !</h2>
-                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
@@ -20,7 +19,7 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <select style="width: 20%;margin-top: 20px;" class="form-control" [(ngModel)]="player_team_op">
+                                <select style="width: 20%;margin-top: 20px;background-color: #f0f0f0;margin: auto;align-content: center;" class="form-control" [(ngModel)]="player_team_op">
                                 	<option value="AND">And</option>
                                 	<option value="OR">Or</option>
                                 </select>
@@ -35,7 +34,7 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <select style="width: 20%;margin-top: 20px;" class="form-control" [(ngModel)]="team_author_op">
+                                <select style="width: 20%;margin-top: 20px;background-color: #f0f0f0;margin: auto;align-content: center;" class="form-control" [(ngModel)]="team_author_op">
                                 	<option value="AND">And</option>
                                 	<option value="OR">Or</option>
                                 </select>
