--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -31,6 +31,7 @@
 	</div>
 
 	<div class="row">
+		<h5>{{tweet.created_at}}</h5>
 		<p style="padding: 20px 30px 30px 30px;" #text></p>	
 	</div>
 </div>
