--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -498,6 +498,10 @@ fieldset[disabled] .btn-success.active {
   display: none;
 }
 
+.ng2-tag-input-field{
+  background-color: #f0f0f0;
+}
+
 .error{
     padding: 10px;
     border-radius: 10px;
