--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -11,12 +11,15 @@
                 <div #error class="error" style="display: none;width: 50%;text-align: center;margin: 20px auto;">
                     <span>Player and Team cannot both be empty</span>
                 </div>
+                
+
                 <div class="col-lg-8 col-lg-offset-2">
                     <div name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Player</label>
-                                <input #playerInput auto-complete [source]="playerSource" [(ngModel)]="player" type="text" class="form-control" placeholder="Player" />
+                                <rl-tag-input autocomplete="true" [autocompleteItems]="playerSource" [(ngModel)]="players" placeholder="Player   "></rl-tag-input>
+                                <!-- <input #playerInput auto-complete [source]="playerSource" [(ngModel)]="player" type="text" class="form-control" placeholder="Player" /> -->
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -31,7 +34,8 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <input #teamInput auto-complete [source]="teamSource" [(ngModel)]="team" type="text" class="form-control" placeholder="Team" />
+                                <rl-tag-input autocomplete="true" [autocompleteItems]="teamSource" [(ngModel)]="teams" placeholder="Team"></rl-tag-input>
+                                <!-- <input #teamInput auto-complete [source]="teamSource" [(ngModel)]="team" type="text" class="form-control" placeholder="Team" /> -->
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -47,7 +51,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Author</label>
-                                <input [(ngModel)]="author" type="text" class="form-control" placeholder="Author"/>
+                                <rl-tag-input [(ngModel)]="authors" placeholder="Author"></rl-tag-input>
+                                <!-- <input [(ngModel)]="author" type="text" class="form-control" placeholder="Author"/> -->
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -63,6 +68,8 @@
         </div>
     </section>
 
-<div style="text-align: center;">
+<div style="text-align: center; margin-bottom: 30px;">
 	<button type="button" class="btn btn-primary" (click)="onClickGetTransfers()">get transfer news</button>	
 </div>
+
+
