--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -502,6 +502,12 @@ fieldset[disabled] .btn-success.active {
   background-color: #f0f0f0;
 }
 
+span.chip{
+  background-color: grey;
+  border-radius: 10px;
+  padding: 5px;
+}
+
 .error{
     padding: 10px;
     border-radius: 10px;
