--- a/src/app/main-image/main-image.component.html
+++ b/src/app/main-image/main-image.component.html
@@ -5,7 +5,7 @@
 		</section>
 
 		<section class="hero-paragraph">
-			<p>WELCOME TO FOOTBALL TRANSFERS. WE RANK RUMOURS BY THEIR RELIABILITY. LOOK FOR A SPECIFIC RUMOUR BY SPECIFYING A PLAYER, MANAGER OR CLUB...</p>
+			<p>Search for your favourite football players and teams, and see what are people are talking about them</p>
 		</section>
 	</div>	
 </section>
