--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -38,6 +38,8 @@
 	
 	</div>
 </div> -->
+
+<!-- <ng2-tweet tweetId="{{tweet.id}}"></ng2-tweet> -->
 <div style="padding: 10px;" id="container" class="tweet_div" #tweet_div>
 	
 </div>
